--- a/delta-frontend/electron-builder.yml
+++ b/delta-frontend/electron-builder.yml
@@ -1,6 +1,6 @@
 appId: com.example.nextron
 productName: My Nextron App
-copyright: Copyright © 2018 Yoshihide Shiono
+copyright: Copyright © 2024 Maxime Premont
 directories:
   output: dist
   buildResources: resources
@@ -10,3 +10,9 @@ files:
       - package.json
       - app
 publish: null
+linux:
+  target:
+    - deb
+    - rpm
+    - snap
+  category: Utility
