--- a/delta-frontend/package.json
+++ b/delta-frontend/package.json
@@ -48,7 +48,11 @@
     "electron:test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-slot": "^1.1.0",
+    "@upstash/rag-chat": "1.0.5",
+    "@upstash/redis": "^1.34.0",
+    "ai": "^3.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "electron-serve": "^1.3.0",
