--- a/delta-frontend/package.json
+++ b/delta-frontend/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@upstash/rag-chat": "1.0.5",
     "@upstash/redis": "^1.34.0",
     "ai": "^3.3.0",
